--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,9 +5,9 @@ server:
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/api_master?serverTimezone=GMT%2B8
+    url: jdbc:mysql://111.231.169.139:3306/api_master?serverTimezone=GMT%2B8
     username: root
-    password: 123456
+    password: coderalliance666!!!
 
 mybatis-plus:
   configuration:
